[gd_scene load_steps=2 format=3 uid="uid://cc7liqf41bqti"]

[ext_resource type="Script" uid="uid://b02iljlmno0xg" path="res://src/scripts/Panels/resource_tracker.gd" id="1_qyq3t"]

[node name="ResourceTracker" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -52.0
offset_right = 52.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qyq3t")

[node name="ResourcesLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 86.0
offset_top = 1.0
offset_right = 131.0
offset_bottom = 14.0
theme_override_font_sizes/font_size = 7
text = "Resources"

[node name="FerriteLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 1.0
offset_right = 35.0
offset_bottom = 14.0
theme_override_font_sizes/font_size = 7
text = "Ferrite"

[node name="FerriteBarsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 20.0
offset_right = 52.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 7
text = "Ferrite Bars"

[node name="FerriteCount" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 12.0
offset_right = 94.0
offset_bottom = 28.0
theme_override_font_sizes/font_size = 7
text = "10000000000000"

[node name="FerriteBarsCount" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 29.0
offset_right = 94.0
offset_bottom = 45.0
theme_override_font_sizes/font_size = 7
text = "10000000000000"

[node name="PlatinumLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 39.0
offset_right = 47.0
offset_bottom = 52.0
theme_override_font_sizes/font_size = 7
text = "Platinum"

[node name="PlatinumCount" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 49.0
offset_right = 94.0
offset_bottom = 65.0
theme_override_font_sizes/font_size = 7
text = "10000000000000"

[node name="PlasmaLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 5.5
offset_top = 57.0
offset_right = 45.5
offset_bottom = 70.0
theme_override_font_sizes/font_size = 7
text = "Plasma"

[node name="PlasmaCount" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 66.0
offset_right = 93.0
offset_bottom = 77.0
theme_override_font_sizes/font_size = 7
text = "10000000000000"
